--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <article>
-    <h1 id="headline">Happy Birth Day!!良い一年を^^</h1>
+    <h1 id="headline">Happy Birth Day^^</h1>
     <p id="text"></p>
     <button id="shuffler">push me</button>
   </article>
