--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
   <article>
-    <h1 id="headline">Happy Birth Day</h1>
+    <h1 id="headline">Happy Birth Day!!</h1>
     <p id="text"></p>
-    <button id="shuffler">push me</button>
+    <button id="shuffler">push</button>
   </article>
 
   <script src="script.js"></script>
