--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <article>
-    <h1 id="headline">Happy Birth でぃ!</h1>
+    <h1 id="headline">Happy!Happy!HappyBirthでぃ!</h1>
     <p id="text"></p>
     <button id="shuffler">push</button>
   </article>
